--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
 <body> 
   <div class="container">
-      
+    <div class="main-container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div clas="card-header">Task List</div> <!-- End of card-header -->
+                </div> <!-- End of card -->
+            </div> <!-- End of col-md-12 -->
+        </div> <!-- End of row -->
+    </div> <!-- End of main-container -->  
   </div> <!--End of container-->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
