add layout for form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <div class="col-md-12">
                 <div class="card">
                     <div clas="card-header">Task List</div> <!-- End of card-header -->
-                </div> <!-- End of card -->
+                </div> <!-- End of card --> 
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- form here -->
+                    </div> <!-- End of col-md-12 -->
+                </div> <!-- End of row -->
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
