--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div> <!-- End of card --> 
                 <div class="row">
                     <div class="col-md-12">
-                        <!-- form here -->
+                        <form id="task-form"></form> <!-- End of form -->
                     </div> <!-- End of col-md-12 -->
                 </div> <!-- End of row -->
             </div> <!-- End of col-md-12 -->
