--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div clas="card-header">Task List</div> <!-- End of card-header -->
-                </div> <!-- End of card --> 
-                <div class="row">
-                    <div class="col-md-12">
-                        <form id="task-form"></form> <!-- End of form -->
-                    </div> <!-- End of col-md-12 -->
-                </div> <!-- End of row -->
+                    <div class="card-body">
+                        <div class="card-title">Task List</div> <!-- End of card-title -->
+                    </div> <!-- End of card body -->
+                </div> <!-- End of card -->
+            </div> <!-- End of col-md-12 -->
+        </div> <!-- End of row --> 
+
+        <div class="row">
+            <div class="col-md-12">
+
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
