added some form elements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
         <div class="row">
             <div class="col-md-12">
-
+                <form id="task-list">
+                  <input type="text" name="task" id="task">
+                  <label for="task">New Task</label>
+                </form> <!-- End of form -->
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
