--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="card-title">Task List</div> <!-- End of card-title -->
+                        <div class="card-title text-center">Task List</div> <!-- End of card-title -->
                     </div> <!-- End of card body -->
                 </div> <!-- End of card -->
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row --> 
 
-        <div class="row">
-            <div class="col-md-12">
-                <form id="task-list">
-                  <input type="text" name="task" id="task">
-                  <label for="task">New Task</label>
-                </form> <!-- End of form -->
+        <div class="row pt-5">
+            <div class="col-md-12 text-center">
+                <div class="form-group" id="task-form"> 
+                    <input type="text" name="task" id="task">
+                    <label for="task">New Task</label> 
+                    <button type="button" class="btn btn-primary">Add Task</button>
+                </div> <!-- End of form -->
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
