--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 <div class="form-group" id="task-form"> 
                     <input type="text" name="task" id="task">
                     <label for="task">New Task</label> 
-                    <button type="button" class="btn btn-primary">Add Task</button>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary btn-lg mt-3 mx-auto">Add Task</button>
+                        </div> <!-- End of nested col-md-12 -->
+                    </div> <!-- Nested row -->                   
                 </div> <!-- End of form -->
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
