--- a/index.html
+++ b/index.html
@@ -15,28 +15,25 @@
 <body> 
   <div class="container">
     <div class="main-container">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-md-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="card-title text-center">Task List</div> <!-- End of card-title -->
-                    </div> <!-- End of card body -->
-                </div> <!-- End of card -->
+                <h1>Busy Day</h1>
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row --> 
 
-        <div class="row pt-5">
-            <div class="col-md-12 text-center">
-                <div class="form-group" id="task-form"> 
-                    <input type="text" name="task" id="task">
-                    <label for="task">New Task</label> 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <button type="button" class="btn btn-primary btn-lg mt-3 mx-auto">Add Task</button>
-                        </div> <!-- End of nested col-md-12 -->
-                    </div> <!-- Nested row -->                   
-                </div> <!-- End of form -->
+        <div class="row text-center">
+            <div class="col-md-12">
+                <span class="title">Task List</span>
             </div> <!-- End of col-md-12 -->
+        </div> <!-- End of row -->
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <form>
+                    <label for="task">New Task:</label>
+                   <input type="text" name="task" id="task">                  
+                </form> <!-- End of form -->
+            </div> <!-- End of col-md-12-->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
   </div> <!--End of container-->
