--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <form>
-                    <label for="task">New Task:</label>
-                   <input type="text" name="task" id="task">                  
+                   <label for="task">New Task:</label>
+                   <input type="text" name="task" id="task">   
+                   <button type="button" class="btn btn-primary btn-lg" value="Add Task">Primary</button>
                 </form> <!-- End of form -->
+            </div> <!-- End of col-md-12-->
+        </div> <!-- End of row -->
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h5 id="task-title">Tasks</h5>
+                <label for="filter">Filter Task:</label>
+                <input type="text" name="filter" id="filter"> 
             </div> <!-- End of col-md-12-->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
