--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <title>Task List</title>
 </head>
 
 <body> 
   <div class="container">
-    <div class="main-container">
-        <div class="row text-center mb-5">
+    <div class="main-container">  
+        <div class="row text-center mb-5">   
             <div class="col-md-12">
                 <h1>Busy Day</h1>
             </div> <!-- End of col-md-12 -->
@@ -27,7 +28,7 @@
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
 
-        <div class="row text-center">
+        <div class="row text-center mb-5">
             <div class="col-md-12">
                 <form>
                    <label for="task">New Task:</label>
@@ -44,8 +45,15 @@
                 <input type="text" name="filter" id="filter"> 
             </div> <!-- End of col-md-12-->
         </div> <!-- End of row -->
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <ul class="collection"></ul>
+                <button type="button" class="btn btn-dark btn-lg" value="clear-tasks" a href="#">Clear Tasks</button>
+            </div> <!-- End of col-md-12 -->
+        </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
-  </div> <!--End of container-->
+  </div> <!--End of container-->   
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
