defined ui variables

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="row text-center mb-5">
             <div class="col-md-12">
-                <form>
+                <form id="task-form">
                    <label for="task">New Task:</label>
                    <input type="text" name="task" id="task">   
                    <button type="button" class="btn btn-primary btn-lg" value="Add Task">Primary</button>
@@ -49,7 +49,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <ul class="collection"></ul>
-                <button type="button" class="btn btn-dark btn-lg" value="clear-tasks" a href="#">Clear Tasks</button>
+                <button type="button" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button>
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
