fixed alert by switching type=submit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <form id="task-form">
                    <label for="task">New Task:</label>
                    <input type="text" name="task" id="task">   
-                   <button type="button" class="btn btn-primary btn-lg" value="Add Task">Primary</button>
+                   <button type="submit" class="btn btn-primary btn-lg" value="Add Task">Add Task</button>
                 </form> <!-- End of form -->
             </div> <!-- End of col-md-12-->
         </div> <!-- End of row -->
@@ -49,7 +49,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <ul class="collection"></ul>
-                <button type="button" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button>
+                <button type="submit" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button>
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
