changes btn so that is has a tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <h5 id="task-title">Tasks</h5>
-                <label for="filter">Filter Task:</label>
+                <label for="filter">Filter Tasks:</label>
                 <input type="text" name="filter" id="filter"> 
             </div> <!-- End of col-md-12-->
         </div> <!-- End of row -->
@@ -49,7 +49,8 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <ul class="collection"></ul>
-                <button type="submit" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button>
+               <!-- <button type="submit" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button> --> 
+               <a href="#" class="btn btn-dark btn-lg" role="button" type="submit" value="clear-tasks">Clear Tasks</a>
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
