clear button works

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-md-12">
                 <ul class="collection"></ul>
                <!-- <button type="submit" class="btn btn-dark btn-lg clear-tasks" value="clear-tasks" a href="#">Clear Tasks</button> --> 
-               <a href="#" class="btn btn-dark btn-lg" role="button" type="submit" value="clear-tasks">Clear Tasks</a>
+               <a href="#" class=" clear-tasks btn btn-dark btn-lg" role="button">Clear Tasks</a>  
             </div> <!-- End of col-md-12 -->
         </div> <!-- End of row -->
     </div> <!-- End of main-container -->  
