--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body> 
   <div class="container">
-    <div class="main-container">  
+    <div class="main-container mt-5">  
         <div class="row text-center mb-5">   
             <div class="col-md-12">
                 <h1>Busy Day</h1>
